# cuda-vector

./: Makefile  README.md  out.csv  prog
cmp/: Makefile  main.cu  prog
common/: utility.cuh
cudavec/: Makefile  main.cu  prog
data/: NB_data.csv  data.csv  data_phases.csv  insertion_data.csv
gpuvector/: Makefile  main.cu  prog  test.cu  utility.cuh
insert/: Makefile  main.cu  prog  run_experiments.sh
lfvector/: evil_cast.cu  lfvector.cu  prog  test.cu
mlfvector/: Makefile  main.cu  orb.cu  prog  run.sh  sm.txt  test.cu
src/: Makefile  experiments.cuh  kernels.cuh  main.cu  prog  run_experiments.sh  run_phases.sh  run_test_NB.sh  tests.cuh
static/: main.cu  prog
test/: CMakeLists.txt  Makefile  main.cu  prog
